--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body
 {
-    background-color: navy;
+    background-color: black;
 }
 
-h1.mainTitle {
+h1.mainTitle 
+{
     font-family: "Consolas";
     font-weight: bold;
-    color: white;
+    color: greenyellow;
 }
