--- a/style.css
+++ b/style.css
@@ -20,19 +20,57 @@ body
     animation: opacity-up 2s linear normal;
 }
 
-div, footer
+div
 {
     margin: 10px;
+    padding: 10px;
+    width: auto;
     border: solid 1px green;
 }
 
-p
+button
 {
+    background-color: black;
+    color: green;
+    font-size: 24px;
+    font-family: "Consolas";
+    border: solid 1px green;
     margin: 10px;
+}
+
+button:hover
+{
+    background-color: green;
+    color: black;
+}
+
+#screen
+{
+    border: solid 5px green;
+}
+
+#buttons
+{
+    padding: 0% 20%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#terminalSection
+{
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 65%;
 }
 
 footer
 {
-    position: fixed;
-    bottom: 10;
+    border: solid 1px green;
+    margin: 10px;
+    padding: 0px 10px;
 }
